--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.10.4",
     "lib-flexible": "^0.3.2",
+    "moment": "^2.29.4",
     "pushstate-server": "^3.0.1",
     "query-string": "^7.0.0",
     "rc-form": "^2.4.12",
