--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "classnames": "^2.3.1",
     "dayjs": "^1.10.4",
     "lib-flexible": "^0.3.2",
+    "minimist": "^1.2.8",
     "moment": "^2.29.4",
     "pushstate-server": "^3.0.1",
     "query-string": "^7.0.0",
     "rc-form": "^2.4.12",
-    "react": "17.0.0",
-    "react-captcha-code": "^1.0.7",
-    "react-dom": "17.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-toastify": "^9.1.3",
-    "zarm": "^2.9.19"
+    "styled-components": "^6.1.0",
+    "zarm": "^3.0.16"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.6",
